2022-04-22  Jim Fowler  <jrf@biblion>

	* Note: When making a modification list this I should run the unit
	tests both before and after. This time I only ran them after and
	there were some small changes that I attribute to earlier changes
	that were not tested.  However, if I had rqun the unit tests before
	modifing, I could have noted what the current state of the test
	were.

	* Tools/python/aabooks/journal/journalfile.py
	(JournalFileTestCase.test_d_check_schema): Modified to support the
	changes to entrylist.py, primarily in writing the output files.

	* Tools/python/aabooks/ajbbook/bookfile.py: Modified to support
	the changes to entrylist.py, primarily in writing the output
	files.

	* Tools/python/aabooks/lib/entrylist.py (EntryList): Changed the
	entrylist to be a list only of entries.  The header is now a
	separate part of the entry list.  Clients can now interate through
	the list without having to test for the header entry at the
	beginning of the list.

2021-08-15  James Fowler  <jrf12@Jamess-MBP.tularosa.net>

	* Tools/xml/fixrubles.py: added program to change price strings
	from 1R to 1 Rbl.  This will, hopefully, prevent confusion between
	1R and R 1.

2021-06-04  Jim Fowler  <jrf@biblion>

	* Tools/python/scripts/verify (test_for_isbn): Added verification
	of ISBN numbers.  ISBN number started showing up in AAA 14.

2021-06-01  Jim Fowler  <jrf@biblion>

	* WebPages/PythonTools.txt: Added Python documentation to
	the web pages. Needed to keep track of the additional modules
	I've installed over time.

2021-05-15  Jim Fowler  <jrf@biblion>

	* Data/Ajb/ajb.ods (AAA): Deleted Books and Conf columns.  Total
	books per volume is now what it counted in aaa??_books.xml.
	Changed Year totals to better match Ajb tab.

2021-05-08  Jim Fowler  <jrf@biblion>

	* Tools/python/scripts/aaaconvert (clean_str): Add clean_str()
	function to do additional clean up on the title and comments.

2021-04-23  Jim Fowler  <jrf@biblion>
